# TileDB-R

./: .Rbuildignore  .editorconfig  .gitignore  .travis.yml  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  NAMESPACE  NEWS.md  README.md  TileDB-R.Rproj  _pkgdown.yml  authors.html  authors.md  cleanup  codecov.yml  configure  configure.ac  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
.ci/: azure-pipelines.yml
.ci/azure/: build-and-check.yaml  install-dependencies.yaml  set-up-library.yaml
.github/: r-ci.sh
.github/workflows/: R-CMD-check.yaml  ci.yaml  matrix.yaml  nightly.yaml  pkgconfig.yaml  pkgdown.yaml  valgrind.yaml  windows.yaml
R/: All.R  AllGenerics.R  Array.R  ArraySchema.R  ArraySchemaEvolution.R  ArrowIO.R  Attribute.R  BatchedQuery.R  Compressor.R  Config.R  Ctx.R  CurrentDomain.R  DataFrame.R  DenseArray.R  DenseArray.R.TEMP.HIDDEN.txt  Dim.R  Domain.R  Error.R  Filestore.R  Filter.R  FilterList.R  FragmentInfo.R  Group.R  Init.R  Logging.R  Matrix.R  Metadata.R  NDRectangle.R  Object.R  Profile.R  Query.R  QueryCondition.R  RcppExports.R  SparseArray.R  SparseMatrix.R  Stats.R  Subarray.R  TileDB-Package.R  TileDBArray.R  TileDBArrayPiping.R  (+16 more)
articles/: data-ingestion-from-sql.html  data-ingestion-from-sql.md  documentation.html  documentation.md  index.html  index.md  installation-options.html  installation-options.md  introduction.html  introduction.md  tiledb-mariadb-examples.html  tiledb-mariadb-examples.md
dev/: LICENSE-text.html  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
dev/articles/: data-ingestion-from-sql.html  documentation.html  index.html  installation-options.html  introduction.html  (+1 more)
docs/: 404.html  LICENSE-text.html  authors.html  documentation.html  documentation.nb.html  index.html  introduction.html  pkgdown.yml  search.json  sitemap.xml
examples/: quickstart_dense.R  quickstart_sparse.R
inst/: LICENSE.txt  NEWS.md
local/: installTileDB.sh  test_densearray.R  test_sparsearray.R
man/: Config-class.Rd  add_filter-tiledb_filter_list-tiledb_filter-method.Rd  allows_dups-set-tiledb_array_schema-method.Rd  allows_dups-tiledb_array_schema-method.Rd  array_consolidate.Rd  array_vacuum.Rd  as.data.frame.tiledb_config.Rd  as.vector.tiledb_config.Rd  as_data_frame.Rd  as_data_table.Rd  assert_uniform_dimensions.Rd  attrs-set-tiledb_array-method.Rd  attrs-set-tiledb_dense-method.Rd  attrs-set-tiledb_sparse-method.Rd  attrs-tiledb_array-ANY-method.Rd  attrs-tiledb_array_schema-ANY-method.Rd  attrs-tiledb_array_schema-character-method.Rd  attrs-tiledb_array_schema-numeric-method.Rd  attrs-tiledb_dense-ANY-method.Rd  attrs-tiledb_sparse-ANY-method.Rd  capacity-set-tiledb_array_schema-method.Rd  capacity-tiledb_array_schema-method.Rd  cell_order-tiledb_array_schema-method.Rd  cell_val_num-tiledb_attr-method.Rd  check-tiledb_array_schema-method.Rd  close.tiledb_dense.Rd  completedBatched.Rd  compressor-tiledb_array_schema-method.Rd  compressor-tiledb_attr-method.Rd  compressor_level-tiledb_compressor-method.Rd  compressor_type-tiledb_compressor-method.Rd  config-tiledb_ctx-method.Rd  createBatched.Rd  create_tiledb_array.Rd  data.frame.conversion-set-tiledb_array-method.Rd  data.frame.conversion-tiledb_array-method.Rd  datatype-tiledb_attr-method.Rd  datatype-tiledb_dim-method.Rd  datatype-tiledb_domain-method.Rd  datetimes_as_int64-set-tiledb_array-method.Rd  (+417 more)
news/: index.html  index.md
pkgdown/: _pkgdown.yml
reference/: [,tiledb_config.html  [,tiledb_filter_list,ANY,tiledb_filter_list-method.html  array_consolidate.html  array_consolidate.md  array_vacuum.html  array_vacuum.md  as.data.frame.tiledb_config.html  as.data.frame.tiledb_config.md  as.vector.tiledb_config.html  as.vector.tiledb_config.md  attrs-set-tiledb_array-method.html  attrs-set-tiledb_array-method.md  attrs-tiledb_array-ANY-method.html  attrs-tiledb_array-ANY-method.md  attrs-tiledb_array_schema-ANY-method.html  attrs-tiledb_array_schema-ANY-method.md  attrs-tiledb_array_schema-character-method.html  attrs-tiledb_array_schema-character-method.md  attrs-tiledb_array_schema-numeric-method.html  attrs-tiledb_array_schema-numeric-method.md  capacity,tiledb_array_schema-method.html  cell_order-tiledb_array_schema-method.html  cell_order-tiledb_array_schema-method.md  cell_val_num,tiledb_attr-method.html  completedBatched.html  completedBatched.md  config-tiledb_ctx-method.html  config-tiledb_ctx-method.md  createBatched.html  createBatched.md  datatype-tiledb_attr-method.html  datatype-tiledb_attr-method.md  datatype-tiledb_dim-method.html  datatype-tiledb_dim-method.md  datatype-tiledb_domain-method.html  datatype-tiledb_domain-method.md  datetimes_as_int64,tiledb_array-method.html  datetimes_as_int64-set-tiledb_array-method.html  datetimes_as_int64-set-tiledb_array-method.md  datetimes_as_int64-tiledb_array-method.html  (+713 more)
src/: Makevars  Makevars.in  Makevars.ucrt  Makevars.win  Makevars.win.new  RcppExports.cpp  array_buffers.h  array_metadata.cpp  arrow_adapter.h  arrowio.cpp  batched.cpp  column_buffer.cpp  column_buffer.h  common.h  deprecation.cpp  durations.cpp  file.cpp  finalizers.h  fixup.cpp  libtiledb.cpp  libtiledb.h  logger.cpp  logger.h  nanoarrow.c  nanoarrow.h  nanoarrow.hpp  nullable.cpp  shmem.cpp  symbols.rds  tiledb_arrowio.h  tiledb_declarations.h  tiledb_version.cpp  updated_arrow_io_impl.h  utilities.cpp  varlength_array.cpp  virtualfile.cpp
tests/: pkgconfig-test.R  tinytest.R
tiledb/: DESCRIPTION
tools/: buildTileDB.sh  bulkTestOnRHub.r  fetchTileDB.sh  fetchTileDBLib.R  fetchTileDBLib.R.in  fetchTileDBSrc.R  getOsRelease.sh  rhubTest.r  testBuildFromSource.sh  testDownloadUrl.sh  testLocalPrebuilt.sh  tiledbVersion.txt  winlibs.R
unused/: ex_varlength_int_double.R  ex_varlength_int_double.py
vignettes/: Makefile  data-ingestion-from-sql.Rmd  data-ingestion-from-sql.md  datetimes.Rmd  documentation.Rmd  documentation.md  installation-options.Rmd  installation-options.md  introduction.Rmd  introduction.md  tiledb-mariadb-examples.Rmd  tiledb-mariadb-examples.md
(+1007 files in other folders)
